<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context="com.example.nishida.palette.MainActivity">

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:id="@+id/darkVibrantSwatch"
            android:text="@string/darkVibrantSwatch"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="8dp"
            android:id="@+id/vibrantSwatch"
            android:text="@string/vibrantSwatch"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="8dp"
            android:id="@+id/lightVibrantSwatch"
            android:text="@string/lightVibrantSwatch"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="8dp"
            android:id="@+id/darkMutedSwatch"
            android:text="@string/darkMutedSwatch"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="8dp"
            android:id="@+id/mutedSwatch"
            android:text="@string/mutedSwatch"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="8dp"
            android:id="@+id/lightMutedSwatch"
            android:text="@string/lightMutedSwatch"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout" />

</RelativeLayout>
